--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,36 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.header-body{
+  background-image: url('./Image/header-bg.jpg');
+  background-repeat: no-repeat;  
+  background-position: top center;
+  background-size: 100% 100%;
+  height: 700px; 
+}
+.menu-item{
+  color: white;
+  padding: 20px;
+  text-decoration: none;
+}
+.menu-item:hover{
+  color: rgb(199, 201, 202);
+}
+.search-input{
+  width: 350px;
+  border-radius: 20px;
+  padding: 5px 5px 5px 15px;
+  background-color: rgba(255, 255, 255, 0.2);
+  border: none;
+  outline: none;
+  color: white;
+}
+input::placeholder{
+  color: #fff;
+  opacity: 0.6; 
+  font-size: 15px;
+}
+.logo{
+  width: 150px;
+}
