--- a/src/index.css
+++ b/src/index.css
@@ -72,5 +72,27 @@ input::placeholder{
 .line {
   margin: 25px 0;
   border-top: 1px solid rgb(116, 114, 114);
-  width: 15%;
+  width: 12%;
+}
+.social-login{
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+.social-login>button{
+  background: none;
+  border: none;
+  font-size: 16px;
+  font-weight: 500;
+  outline: none;
+  border: 1px solid gray;
+  border-radius: 20px;
+  width: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 8px;
 }
