--- a/src/App.css
+++ b/src/App.css
@@ -3,5 +3,5 @@
     background-repeat: no-repeat;  
     background-position: top center;
     background-size: 100% 100%;
-    height: 657px; 
+    height: 100vh; 
 }
