--- a/src/index.css
+++ b/src/index.css
@@ -100,3 +100,17 @@ input::placeholder{
   align-items: center;
   padding: 8px;
 }
+.hotel-img{
+ width: 250px;
+}
+.hotel-text {
+  color: rgb(229, 232, 235);
+}
+
+.price{
+  font-size: 18px;
+  font-weight: 500;
+}
+.star{
+  width: 18px;
+}
