--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,7 @@ input::placeholder{
   background-color: #f9a51a;
   border: none;
   outline: none;
+  color: #000;
   padding: 12px 142px;
   border-radius: 2px;
   margin-left: 7px;
